Thu Feb 26 16:59:45 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c libxslt/pattern.c: removed the last use
	  of _private that time in the input document, use the psvi
	  field again, this may be interesting if XSLT2 support gets
	  in but since this is very unlikely ...

Thu Feb 26 16:04:28 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c libxslt/variables.c: use the psvi field
	  of teh document used for RVT instead of _private. 

Thu Feb 26 15:17:52 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/attrvt.c libxslt/templates.c: use the psvi field of
	  the attribute instead of the _private one to compile AVT infos

Thu Feb 26 14:53:16 CET 2004 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-144.xml
	  tests/general/Makefile.am tests/docs/bug-144*: added test
	  similar to 143 but checking for AVT in local variables.
	
Thu Feb 26 13:16:33 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/attrvt.c libxslt/variables.c: fixed a regression for
	  AVT found in global variable content.
	* tests/docs/Makefile.am tests/docs/bug-143.xml
	  tests/general/Makefile.am tests/docs/bug-143*: added test
	  to the regression suite.

Wed Feb 25 16:35:01 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c libxslt/keys.h libxslt/preproc.c 
	  libxslt/transform.c libxslt/variables.c libxslt/xsltutils.c:
	  First step toward _private cleanup: use the psvi field to store
	  the precompilation informations in the stylesheet nodes.

Wed Feb 25 14:24:34 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: trying to use the fact that names comes
	  from a dictionnary when looking up for variables.
	* tests/documents/Makefile.am: try to fix an error reported on
	  the list.

Wed Feb 25 17:02:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* tests/general/Makefile.am, tests/general/bug-142.xsl,
	  tests/general/bug-142.out, tests/docs/Makefile.am,